--- a/Topic 1_Python and Libraries/Slides/0.1-Basics of Python.md
+++ b/Topic 1_Python and Libraries/Slides/0.1-Basics of Python.md
@@ -1,11 +1,12 @@
 ---
-marp: false
+marp: true
 _class: lead
 # theme: gaia
 background: white
 paginate: true
----
+style: @import url('https://unpkg.com/tailwindcss@^2/dist/utilities.min.css');
 
+---
 # Basics of Python
 
 Jin Wang
@@ -15,21 +16,38 @@ MSIS, Rutgers
 ---
 **Outline**
 
-[Setup](#setup)
-[1. Vairables and functions](#1-vairables-and-functions)
-[2. Conditionals and loops](#2-conditionals-and-loops)
+<div class="grid grid-cols-2 gap-4">
+<div>
 
+[Setup](#setup)
+[1. Vairables and functions](#1-vairables-and-functions)  
+- [1.1  Variables](#11--variables)
+- [1.2 Functions](#12-functions)
+- [Practice Questions](#practice-questions)
+
+[2. Conditionals and loops](#2-conditionals-and-loops)
 - [2.1 Conditionals](#21-conditionals)
-- [2.1 Loops](#21-loops)
+- [2.2 Loops](#22-loops)
+- [Practice Questions](#practice-questions-1)
+
+</div>
+
+<div>
 
 [3. Strings and lists](#3-strings-and-lists)
-- [3.1 Strings](#31-strings)
-- [3.2 list](#32-list)
+  - [3.1 Strings](#31-strings)
+  - [3.2 list](#32-list)
+  - [Practice Questions](#practice-questions-2)
 
 [4. Set, tuple, and dictionary](#4-set-tuple-and-dictionary)
-- [4.1 Set](#41-set)
-- [4.2 Tuple](#42-tuple)
-- [4.3 Dictionary](#43-dictionary)
+  - [4.1 Set](#41-set)
+  - [4.2 Tuple](#42-tuple)
+  - [4.3 Dictionary](#43-dictionary)
+  - [Practice questions](#practice-questions-3)	
+</div>
+
+</div>
+
 
 ---
 ## Setup
@@ -45,6 +63,10 @@ MSIS, Rutgers
 
 ## 1. Vairables and functions
 
+---
+### 1.1  Variables
+
+---
 
 **String formatting**
 
@@ -69,6 +91,10 @@ z = x + y
 
 print(f"{x} plus {y} equals {z}.")
 ```
+---
+
+### 1.2 Functions
+
 ---
 
 **Create our own function by `def`**
@@ -444,6 +470,42 @@ positive_numbers = [n for n in numbers if n > 0]
 print(positive_numbers)
 ```
 ---
+### Practice Questions
+
+1. Use two `input` function twice, one for inputing first name and another one for last name.  Use `.strip()` and `.title()` methods to correct user's input. Then print "Last name, First name". For example, input: " jin" as first name, "wang" as last name, the output would be "Wang, Jin".
+---
+
+2. Given an address, e.g., "100 Rockafeller Road, Piscataway, NJ 08854". Try to split the string, and get the information, street, city, state, zipcode.
+---
+
+3. Find even numbers, using loop and `append()` method.
+	- Method 1:
+		- Define a list containing a list of numbers
+		- Use `for` loop to traverse the elements in the list. If the element is an even number, put it into a new list using `append` method.
+		- For example, given a list `[2, 3, 10, 17, 20]`, the  result is [2, 10, 20].
+	- Method 2:
+		- Use comprehension to finish the question.
+---
+4. Find prime numbers
+	- Create a function which takes an integer, return `True` if the number is a prime number and return `False` otherwise.
+	- Define a list containing a list of numbers
+	- Use `filter` function to obtain the prime numbers in the list and print them.
+	- For example, given a list `[2, 3, 10, 17, 20]`, the prime numbers are 2, 3 and 17.
+---
+
+5. Capitalize all words in a list, using `map` function.
+	- Create a function which takes a string and returns capitalized string.
+	- Define a list containing several words/strings.
+	- Use `map` function to capitalize all words in the list.
+	- For example, given a list `['Rbs', 'Rutgers']`,  the result is ['RBS', 'RUTGERS'].
+	- Use comprehension to finish the question. 
+
+
+
+
+
+
+---
 
 ## 4. Set, tuple, and dictionary
 
@@ -548,6 +610,7 @@ for i, university in enumerate(universities):
 ---
 
 ### 4.3 Dictionary
+---
 
 - We can *define a dictionary* in the following way.
 	```python
@@ -589,5 +652,69 @@ print(d['PISCATAWAY'])
 ```
 
 ---
+
+### Practice questions
+---
+<div class="grid grid-cols-2 gap-4">
+
+<div>
+
+1. We've provided you with a list of lottery players, and also with 6 random lottery numbers. The random lottery numbers are generated like this:
+	```python
+		import random
+		lottery_numbers = set(random.sample(list(range(22)), 6))
+	```
+    And the list of players we've given you are:
+
+	```python
+		players = [
+		("Rolf", {1, 3, 5, 7, 11, 20}),
+		("Charlie", {2, 7, 9, 5, 12, 15}),
+		("Anna", {7, 8, 1, 3, 13, 16}),
+		("Jen", {4, 7, 3, 5, 12, 21})
+		]
+	```
+
+</div>
+
+<div>
+
+Try to find out the number of winnings for each person. For example, if the lottery number is  `6, 8, 9, 13, 16, 19`, you need to print:
+```python
+    Rolf won 0.
+    Charlie won 1.
+    Anna has won 3.
+    Jen has won 0.
+```
+
+</div>
+</div>
+
+---
+
+2. Summary data. Create a function, named `summarize_data`, which takes a list of numbers and returns a tuple containing the minimum, mean, and the maximum values. For example, given `[1, 2, 5]`, it would return `1, 2.6666, 5`.
+	- You may use some built-in functions, like `sum`, `min`, and `max` .
+
+---
+
+3. **(Optional)** Letter frequency. Create a function, named `letter_frequency`, which takes a string and prints the letters in the string (case-insensitive, or just use upper case) and corresponding frequency. For example, 
+	- Given 'Rutgers, RBS', the function would print `[('G', 1), ('U', 1), ('B', 1), ('T', 1), ('R', 3), (',', 1), ('E', 1), ('S', 2)]`
+
+---
+
+4. Character counts. Given a string, try to obtain the counts of the characters in it (case insensitive). For example, given "Rutgers, RBS", the output should be the dictionary, {'T': 1, 'R': 3, 'B': 1, 'E': 1, ' ': 1, 'S': 2, 'U': 1, 'G': 1}.
+
+---
+
+5. Reverse lookup. The following dictionary shown the rosters of the three courses. We can easily check the student names each course has. Now we would like to do reverse lookup. That is, we would like to get a dictionary showing the courses that each student is taking. 
+	```python
+	roster = {
+		'STATS_385': ['Jack', 'Anne', 'John', 'Peter'],
+		'PROG_388': ['Tom', 'Mark', 'Jack', 'Jin'],
+		'LARGESCALE_487': ['Anne', 'John', 'Jin', 'Jack']
+	}
+	```
+---
+End
 
 
