--- a/Topic-3_End-to-End_ML_project/Code/2-Data Cleaning.ipynb
+++ b/Topic-3_End-to-End_ML_project/Code/2-Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "array([8, 1, 9, 4, 0, 2, 3, 5, 6, 7])"
+       "array([1168, 1418, 1840, ..., 1203, 1015, 1458])"
       ]
      },
      "execution_count": 4,
@@ -47,7 +47,7 @@
    ],
    "source": [
     "# np.random.seed(206)\n",
-    "np.random.permutation(10)"
+    "np.random.permutation(2025)"
    ]
   },
   {
