--- a/HW-2/HW2 - LR and traning.ipynb
+++ b/HW-2/HW2 - LR and traning.ipynb
@@ -47,10 +47,10 @@
    "source": [
     "**Task-1:** Bias and variance\n",
     "\n",
-    "1. Randomly split the data into training (80%) and testing(20%) sets.\n",
-    "2. Randomly select 80% data from the training set to train a model, then calculate test MSE. Repeat it 100 times. \n",
-    "3. Perform (2) for 1-degree to 10-degree polynomial regression models.\n",
-    "4. Plot test MSEs vs models\n"
+    "1. (1 pt)Randomly split the data into training (80%) and testing(20%) sets.\n",
+    "2. (3 pts)Randomly select 80% data from the training set to train a model, then calculate test MSE. Repeat it 100 times. \n",
+    "3. (3 pts)Perform (2) for 1-degree to 10-degree polynomial regression models.\n",
+    "4. (2 pts) Plot test MSEs vs models\n"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "source": [
     "**Task-2:** cross-validation\n",
-    "- Use 5-fold cross-validation to select best model from polynomial regression models (1-degree to 10-degree). Please plot mean training mse and mean validation mse."
+    "- (4 pts) Use 5-fold cross-validation to select best model from polynomial regression models (1-degree to 10-degree). Please plot training mse and validation mse."
    ]
   },
   {
@@ -81,8 +81,8 @@
    "source": [
     "**Task-3:** LASSO\n",
     "1. Randomly split the data into training (80%) and testing(20%) sets.\n",
-    "2. Fit LASSO regression for 10th-degress polynomial model tuning parameter $\\alpha=0.3$. Then, calculate the testing RMSE. Can the LASSO model help select variables?\n",
-    "3. Use grid search to choose the best $\\alpha$ value (You may need multiply grid searches). Use the LASSO model the best $alpha$ value to calculate the testing RMSE. "
+    "2. (2 pts) Fit LASSO regression for 10th-degress polynomial model tuning parameter $\\alpha=0.3$. Then, calculate the testing RMSE. Can the LASSO model help select variables?\n",
+    "3. (2 pts) Use grid search to choose the best $\\alpha$ value (You may need multiply grid searches). Use the LASSO model the best $alpha$ value to calculate the testing RMSE. "
    ]
   },
   {
@@ -101,7 +101,7 @@
     "**Task-4: Elastic Net with Grid Search**\n",
     "\n",
     "- Randomly split the data into training (80%) and testing(20%) sets.\n",
-    "- Use grid search to choose the best settings for `alpha` and `l1_ratio` value (You may need multiply grid searches). Use the elastic net model with the best settings to calculate the testing RMSE."
+    "- (3 pts) Use grid search to choose the best settings for `alpha` and `l1_ratio` value (You may need multiply grid searches). Use the elastic net model with the best settings to calculate the testing RMSE."
    ]
   },
   {
